# py-caj-pdf

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
backend/: api.py  config.py  converter.py  history.py  macos_app.py  main.py  path_resolver.py  queue_manager.py  scanner.py
docs/superpowers/specs/: 2026-05-22-caj-pdf-desktop-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  api.js  style.css
resources/: icon.icns
resources/macos/CAJ转PDF.app/Contents/: Info.plist
resources/macos/CAJ转PDF.app/Contents/MacOS/: CAJ转PDF
scripts/: build_macos.sh  build_windows.ps1  caj-pdf.spec  fetch_windows_build.sh  installer.iss  run_macos.sh
tests/: test_core.py
