[project]
name = "caj-pdf-desktop"
version = "0.1.0"
description = "批量 CAJ 转 PDF 桌面应用"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pywebview>=5.0",
    "PyPDF2>=2.0,<3",
    "imagesize>=1.3.0",
]

[project.scripts]
caj-pdf = "backend.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
